--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
                 id: path
                 env:
                     APP_NAME: "tr-trendrealty-api"
-                run: echo "::set-output name=VALUE::'$.dependencies[?(@.name=${APP_NAME})].version'"
+                run: echo "::set-output name=VALUE::$.dependencies[?(@.name='${APP_NAME}')].version"
 
             -   shell: bash
                 run: |
@@ -48,6 +48,7 @@ jobs:
                     value: "100.500.0-check"
                     branch: "team-05"
                     message: "Update ${APP_NAME}"
+                    updateFile: true
 
             -   name: Deploy
                 shell: bash
