--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,11 +34,11 @@ jobs:
                 id: path
                 env:
                     APP_NAME: "tr-trendrealty-api"
-                run: echo "::set-output name=VALUE::dependencies[?(@.name='${APP_NAME}')].version"
+                run: echo "::set-output name=VALUE::$.dependencies[?(@.name='${APP_NAME}')].version"
 
-            -   shell: bash
-                run: |
-                    echo ${{ steps.path.outputs.VALUE }}
+#            -   shell: bash
+#                run: |
+#                    echo ${{ steps.path.outputs.VALUE }}
 
             -   name: Update Image Version in the related HelmChart values.yaml
                 uses: fjogeleit/yaml-update-action@master
