--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,10 @@ on:
                 type: string
                 required: true
         secrets:
+            CHART_USER:
+                required: true
+            CHART_PASS:
+                required: true
             DEV_KUBE_CONFIG:
                 required: true
 
