--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,8 @@ jobs:
             -   name: Checkout
                 uses: actions/checkout@v2
                 with:
+                    repository: trend-dev/tr-helm-chart
+                    ref: ${{ github.event.inputs.LOCATION }}
                     fetch-depth: 0
 
             -   name: Configure Git
