--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,8 @@ on:
             DEV_KUBE_CONFIG:
                 required: true
 
+permissions: write-all
+
 jobs:
     release:
         runs-on: ubuntu-latest
