--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,8 @@ on:
                 required: true
             DEV_KUBE_CONFIG:
                 required: true
+            TOKEN:
+                required: true
 
 jobs:
     release:
@@ -75,7 +77,7 @@ jobs:
                     message: Update ${{ inputs.APP_NAME }}
                     updateFile: true
                     repository: trend-dev/tr-helm-chart
-                    token: ${{ secrets.GITHUB_TOKEN }}
+                    token: ${{ secrets.TOKEN }}
 
             -   name: Upgrade
                 shell: bash
