update pass through DEV_KUBE_CONFIG

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,7 +63,7 @@ jobs:
                 shell: bash
                 run: |
                     mkdir ~/.kube
-                    echo ${{ secrets.DEV_KUBE_CONFIG }} > ~/.kube/config
+                    echo ${{ secrets.DEV_KUBE_CONFIG }} | base64 -d > ~/.kube/config
                     cat ~/.kube/config
 
             -   name: Update Image Version in the related HelmChart values.yaml
