--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,16 @@ on:
             LOCATION:
                 type: string
                 required: true
+            DOCKER_REGISTRY:
+                description: "Docker registry to push image"
+                type: string
+                required: false
+                default: "docker-registry.trendagent.ru:5000"
         secrets:
+            DOCKER_REGISTRY_USER:
+                required: true
+            DOCKER_REGISTRY_PASSWORD:
+                required: true
             CHART_USER:
                 required: true
             CHART_PASS:
@@ -55,6 +64,16 @@ jobs:
                 run: |
                     helm repo add trend http://trend-dev.ru:5000 --username ${{ secrets.CHART_USER }} --password ${{ secrets.CHART_PASS }}
 
+            # Login against a Docker registry except on PR
+            # https://github.com/docker/login-action
+            -   name: Log into Docker registry
+                    if: ${{ github.event_name != 'pull_request' }}
+                    uses: docker/login-action@v1
+                    with:
+                        registry: ${{ inputs.DOCKER_REGISTRY }}
+                        username: ${{ secrets.DOCKER_REGISTRY_USER }}
+                        password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+
             -   name: Prepare propertyPath
                 id: path
                 run: echo "::set-output name=VALUE::$.dependencies[?(@.name=='${{ inputs.APP_NAME }}')].version"
@@ -84,4 +103,4 @@ jobs:
                 run: |
                     cd ./charts/tr-system/
                     helm dependency build ./
-                    helm upgrade tr-system --install --namespace ${{ inputs.LOCATION }} ./ --atomic 
+                    helm upgrade tr-system --install --namespace ${{ inputs.LOCATION }} ./ --atomic
