--- a/charts/tr-system/Chart.yaml
+++ b/charts/tr-system/Chart.yaml
@@ -14,3 +14,6 @@ dependencies:
   - name: tr-questionnaire-api
     version: 1.2.2-50c6512bf15e152d3a3f2ba2da022a52454dd7d4
     repository: http://trend-dev.ru:5000
+  - name: tr-cp-api
+    version: 0.0.0
+    repository: http://trend-dev.ru:5000
