--- a/charts/tr-system/Chart.yaml
+++ b/charts/tr-system/Chart.yaml
@@ -7,7 +7,7 @@ appVersion: 0.0.2
 dependencies:
   - name: tr-authentication-api
     version: 2.0.11-67e2b95bf5375dfb983a67de2a5bb319bf73ba5a
-    repository: http://trend-dev.ru:5000
+    repository: oci://docker-registry.trendagent.ru:5000/helm-charts
   - name: tr-trendrealty-api
     version: 5.28.1-532ef14a33fb3b3e645ce5840de7650cdd5251c2
     repository: http://trend-dev.ru:5000
