--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,16 @@ on:
             LOCATION:
                 type: string
                 required: true
+            DOCKER_REGISTRY:
+                description: "Docker registry for helm chart"
+                type: string
+                required: false
+                default: "docker-registry.trendagent.ru:5000"
         secrets:
+            DOCKER_REGISTRY_USER:
+                required: true
+            DOCKER_REGISTRY_PASSWORD:
+                required: true
             CHART_USER:
                 required: true
             CHART_PASS:
@@ -54,6 +63,7 @@ jobs:
                 shell: bash
                 run: |
                     helm repo add trend http://trend-dev.ru:5000 --username ${{ secrets.CHART_USER }} --password ${{ secrets.CHART_PASS }}
+                    helm registry login -u ${{ secrets.DOCKER_REGISTRY_USER }} -p ${{ secrets.DOCKER_REGISTRY_PASSWORD }} ${{ inputs.DOCKER_REGISTRY }}
 
             -   name: Prepare propertyPath
                 id: path
@@ -64,7 +74,6 @@ jobs:
                 run: |
                     mkdir ~/.kube
                     echo ${{ secrets.DEV_KUBE_CONFIG }} | base64 -d > ~/.kube/config
-                    cat ~/.kube/config
 
             -   name: Update Image Version in the related HelmChart values.yaml
                 if: inputs.APP_VERSION != ''
