--- a/charts/tr-system/Chart.yaml
+++ b/charts/tr-system/Chart.yaml
@@ -10,7 +10,7 @@ dependencies:
     repository: oci://docker-registry.trendagent.ru:5000/helm-charts
   - name: tr-trendrealty-api
     version: 5.29.2-a2a1715b547f91a100a799303ac5d29c739e244e
-    repository: http://trend-dev.ru:5000
+    repository: oci://docker-registry.trendagent.ru:5000/helm-charts
   - name: tr-questionnaire-api
     version: 1.3.2-e9b30a566196f6c1ce37bb444a7ee8cbd3cdf3fc
     repository: http://trend-dev.ru:5000
