--- a/charts/tr-system/Chart.yaml
+++ b/charts/tr-system/Chart.yaml
@@ -13,7 +13,7 @@ dependencies:
     repository: oci://docker-registry.trendagent.ru:5000/helm-charts
   - name: tr-questionnaire-api
     version: 1.3.2-e9b30a566196f6c1ce37bb444a7ee8cbd3cdf3fc
-    repository: http://trend-dev.ru:5000
+    repository: oci://docker-registry.trendagent.ru:5000/helm-charts
   - name: ta-cabinets-api
     version: 1.3.10-a4475413ca5939304476366b8e85b238835815fd
     repository: http://trend-dev.ru:5000
