--- a/charts/tr-system/Chart.yaml
+++ b/charts/tr-system/Chart.yaml
@@ -16,7 +16,7 @@ dependencies:
     repository: oci://docker-registry.trendagent.ru:5000/helm-charts
   - name: ta-cabinets-api
     version: 1.3.10-a4475413ca5939304476366b8e85b238835815fd
-    repository: http://trend-dev.ru:5000
+    repository: oci://docker-registry.trendagent.ru:5000/helm-charts
   - name: tr-cp-api
     version: 1.10.13-e845fd1e904efd2423241ad62f8471c568c76110
     repository: http://trend-dev.ru:5000
