--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ on:
 
 jobs:
     release:
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         steps:
             -   name: Checkout
                 uses: actions/checkout@v2
