--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,10 +49,10 @@ jobs:
                     echo ${{ inputs.APP_NAME }}
                     echo ${{ inputs.APP_VERSION }}
 
-            -   name: Configure Git
-                run: |
-                    git config user.name "$GITHUB_ACTOR"
-                    git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+#            -   name: Configure Git
+#                run: |
+#                    git config user.name "$GITHUB_ACTOR"
+#                    git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
             -   name: Install Helm
                 uses: azure/setup-helm@v1
