ci: update helm chart registry

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,7 +72,7 @@ jobs:
             -   name: Add Kube config
                 shell: bash
                 run: |
-                    mkdir ~/.kube
+                    mkdir -p ~/.kube
                     echo ${{ secrets.DEV_KUBE_CONFIG }} | base64 -d > ~/.kube/config
 
             -   name: Update Image Version in the related HelmChart values.yaml
