--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,16 @@ on:
             LOCATION:
                 type: string
                 required: true
+            DOCKER_REGISTRY:
+                description: "Docker registry for helm chart"
+                type: string
+                required: false
+                default: "docker-registry.trendagent.ru:5000"
         secrets:
+            DOCKER_REGISTRY_USER:
+                required: true
+            DOCKER_REGISTRY_PASSWORD:
+                required: true
             DEV_KUBE_CONFIG:
                 required: true
             TOKEN:
@@ -22,7 +31,7 @@ on:
 
 jobs:
     release:
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         steps:
             -   name: Checkout
                 uses: actions/checkout@v2
@@ -36,15 +45,15 @@ jobs:
                     echo ${{ inputs.APP_NAME }}
                     echo ${{ inputs.APP_VERSION }}
 
-            -   name: Configure Git
-                run: |
-                    git config user.name "$GITHUB_ACTOR"
-                    git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-
             -   name: Install Helm
-                uses: azure/setup-helm@v3
+                uses: azure/setup-helm@v1
                 with:
-                    version: ''
+                    version: v3.8.0
+
+            -   name: Add trend repo
+                shell: bash
+                run: |
+                    helm registry login -u ${{ secrets.DOCKER_REGISTRY_USER }} -p ${{ secrets.DOCKER_REGISTRY_PASSWORD }} ${{ inputs.DOCKER_REGISTRY }}
 
             -   name: Prepare propertyPath
                 id: path
@@ -53,7 +62,7 @@ jobs:
             -   name: Add Kube config
                 shell: bash
                 run: |
-                    mkdir ~/.kube
+                    mkdir -p ~/.kube
                     echo ${{ secrets.DEV_KUBE_CONFIG }} | base64 -d > ~/.kube/config
 
             -   name: Update Image Version in the related HelmChart values.yaml
