--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,9 +46,9 @@ jobs:
                     echo ${{ inputs.APP_VERSION }}
 
             -   name: Install Helm
-                uses: azure/setup-helm@v1
+                uses: azure/setup-helm@v3
                 with:
-                    version: v3.8.0
+                    version: '' #use the latest helm version on github
 
             -   name: Add trend repo
                 shell: bash
